@@ -4,7 +4,7 @@ $LOAD_PATH.unshift(lib) unless $LOAD_PATH.include?(lib)
 
 Gem::Specification.new do |gem|
   gem.name          = "opengl-bindings"
-  gem.version       = "1.2.3"
+  gem.version       = "1.2.4"
   gem.authors       = ["vaiorabbit"]
   gem.email         = ["vaiorabbit@gmail.com"]
   gem.summary       = %q{Bindings for OpenGL 1.0-4.4 and extensions (For MRI >= 2.0.0)}
@@ -13,7 +13,6 @@ Gem::Specification.new do |gem|
   gem.license       = "zlib/libpng"
   gem.description   = <<-DESC
 Ruby bindings for OpenGL 1.0-4.4 and all extensions using Fiddle (For MRI >= 2.0.0).
-For more information, please visit: http://github.com/vaiorabbit/ruby-opengl
   DESC
 
   gem.required_ruby_version = '>= 2.0.0'
